fix: adding linebreak in description, responsive

--- a/src/components/StepsAndPreview/StepsAndPreview.css
+++ b/src/components/StepsAndPreview/StepsAndPreview.css
@@ -18,6 +18,7 @@
 @media (max-width: 992px) {
     .steps-and-preview {
         flex-direction: column;
+        gap: 40px;
     }
 
     .steps-and-preview__steps {
