--- a/src/components/UI/Textarea/Textarea.css
+++ b/src/components/UI/Textarea/Textarea.css
@@ -11,3 +11,9 @@
     padding: 10px;
     resize: none;
 }
+
+@media (max-width: 480px) {
+    .textarea {
+        height: 200px;
+    }
+}
